2014-04-15  Julien Bect  <julien.bect@supelec.fr>

	Don't include stk_optim_hasfmincon in the Octave package.

	* admin/make_octave_package.m: modified

	Some functions are not part of the public API.

	* core/ortho_func.m: modified (doc)
	* core/stk_cholcov.m: modified (doc)
	* core/@stk_kreq_qr/get.m: modified (doc)
	* core/@stk_kreq_qr/isequal.m: modified (doc)
	* core/@stk_kreq_qr/linsolve.m: modified (doc)
	* core/@stk_kreq_qr/stk_kreq_qr.m: modified (doc)
	* core/@stk_kreq_qr/stk_set_righthandside.m: modified (doc)
	* core/@stk_kreq_qr/stk_squared_seminorm.m: modified (doc)
	* core/@stk_kreq_qr/stk_update.m: modified (doc)
	* core/@stk_kreq_qr/subsref.m: modified (doc)
	* misc/dist/stk_gpquadform.m: modified (doc)

2014-04-14  Julien Bect  <julien.bect@supelec.fr>

	stk_cholcov: new function, chol + regularization noise

	* core/stk_cholcov.m: New function.
	* config/stk_config_setup.m: Change the name of a warning.
	* paramestim/stk_param_init.m: Use stk_colcov instead of chol.
	* core/@stk_kreq_qr/get.m: Use stk_colcov instead of chol.
	* paramestim/stk_param_relik.m: Use stk_cholcov.
	* examples/01_kriging_basics/stk_example_kb07.m: Increase
	regularity for the forth subplot. Now we can, so why not?
	* examples/01_kriging_basics/stk_example_kb08.m: Remove FIXME
	comment. Change subplot titles.
	* utils/stk_generate_samplepaths.m: Use stk_colcov instead of
	chol. Remove FIXME comment. Remove observations points from the
	result when generating conditional sample paths (bugfix).

2014-04-13  Julien Bect  <julien.bect@supelec.fr>

	Generation of conditioned sample paths made easy (ticket #3).

	* utils/stk_generate_samplepaths.m: Generate conditioned sample
	paths if additional (xi, zi) arguments are provided.
	* examples/01_kriging_basics/stk_example_kb08.m: New example.

2014-04-12  Julien Bect  <julien.bect@supelec.fr>

	Move stk_feval.m to utils/arrays/generic.

	* utils/stk_feval.m: moved (from)
	* utils/arrays/generic/stk_feval.m: moved (to)
